--- a/css/styles.css
+++ b/css/styles.css
@@ -1,127 +1,127 @@
-
 * {
-  box-sizing: border-box;
-  margin: 0 auto;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
 }
 
 
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 body {
-  font-family: 'Rubik', sans-serif;
-  /* font-family: 'Righteous', cursive; */
-  /* font-family: 'Oswald', sans-serif; */
+    font-family: 'Rubik', sans-serif;
+    /* font-family: 'Righteous', cursive; */
+    /* font-family: 'Oswald', sans-serif; */
 
-  
+
 }
 
 body p {
-  line-height: 1.5rem;
-  font-size: 0.9rem;
+    line-height: 1.5rem;
+    font-size: 0.9rem;
 }
 
-/* Navbar start */
+/* Navbar start */`
 
 nav {
-  display: flex;
-  position: fixed;
-  background-color: white;
-  width: 100%;
-  border-bottom: .2rem  solid #eee;
-  height: 3rem;
-  z-index: 999;
-  flex-direction: column;
+    display: flex;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    border-bottom: .2rem solid #eee;
+    height: 3rem;
+    z-index: 999;
+    flex-direction: column;
 }
 
 .top-nav {
-  flex: 8;
-  position: relative;
-  width: 100%;
+    flex: 8;
+    position: relative;
+    width: 100%;
 }
 
 .top-nav h1 {
-  position: relative;
-  padding-top: .4rem;
-  padding-left: .8rem;
-  font-family: 'Righteous', cursive;
-  margin: 0;
-  font-size: 2rem;
+    position: relative;
+    padding-top: .4rem;
+    padding-left: .8rem;
+    font-family: 'Righteous', cursive;
+    margin: 0;
+    font-size: 2rem;
 }
 
 /* burger */
 .top-nav span {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding-top: .51rem;
-  padding-right: .8rem;
-  padding-left: .8rem;
-  padding-bottom: .5rem;
-  border-top: .02rem solid #eee;
-  border-left: .08rem solid #eee;
-  border-right: .08rem solid #eee;
-  border-bottom: none;
-  cursor: pointer; 
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-top: .51rem;
+    padding-right: .8rem;
+    padding-left: .8rem;
+    padding-bottom: .5rem;
+    border-top: .02rem solid #eee;
+    border-left: .08rem solid #eee;
+    border-right: .08rem solid #eee;
+    border-bottom: none;
+    cursor: pointer;
 }
 
 .top-nav i {
-  font-size: 2rem;
+    font-size: 2rem;
 }
+
 /* end of burger */
 
 .nav-menu {
-  width: 100%;
-  background-color: white;
+    width: 100%;
+    background-color: white;
 }
 
 .menu-links {
-  margin-top: .39rem;
-  border-top: .1rem solid #eee;
-  font-family: 'Oswald', sans-serif;
-  list-style: none;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  width: 100%;
-  
-  display: none;
-  
-  flex-direction: column;
-  height: 200vh;
-  z-index: 998;
+    margin-top: .39rem;
+    border-top: .1rem solid #eee;
+    font-family: 'Oswald', sans-serif;
+    list-style: none;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    width: 100%;
+
+    display: none;
+
+    flex-direction: column;
+    height: 200vh;
+    z-index: 998;
 }
 
 .menu-links li {
-  padding-left: .8rem;
-  padding-top: .8rem;
-  padding-bottom: .8rem;
-  border-bottom: .1rem solid #eee;
-  margin: 0;
-  width: 100%;
+    padding-left: .8rem;
+    padding-top: .8rem;
+    padding-bottom: .8rem;
+    border-bottom: .1rem solid #eee;
+    margin: 0;
+    width: 100%;
 }
 
 .call-now {
-  font-size: 1.3rem;
+    font-size: 1.3rem;
 }
 
 .menu-links a {
-  color: black;
+    color: black;
 }
 
 
 .call-now a {
-  color: rgba(29, 90, 170, 0.6);
+    color: rgba(29, 90, 170, 0.6);
 }
 
 .call-now a:active {
-  color: black;
+    color: black;
 }
 
 .menu-links a:active {
-  color: rgba(29, 90, 170, 0.6);
+    color: rgba(29, 90, 170, 0.6);
 }
 
 
@@ -130,129 +130,129 @@ nav {
 
 
 .banner-intro {
-  position: relative;
-  top: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-left: 0;
-  margin-right: 0;
-  padding-top: 3rem;
-  padding-bottom: 4rem;
+    position: relative;
+    top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 3rem;
+    padding-bottom: 4rem;
 }
 
 header {
-  background-image:  linear-gradient(rgba(29, 90, 170, 0.6),rgba(29, 90, 170, 0.6)),url(https://s3-us-west-1.amazonaws.com/bcn-business-connect/cover.jpg);
-  
-  background-size: auto;
+    background-image: linear-gradient(rgba(29, 90, 170, 0.6), rgba(29, 90, 170, 0.6)), url(https://s3-us-west-1.amazonaws.com/bcn-business-connect/cover.jpg);
 
-  background-position: center top;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 32rem;
-  display: flex;
-  flex-direction: column;
-/*   
+    background-size: auto;
+
+    background-position: center top;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32rem;
+    display: flex;
+    flex-direction: column;
+    /*   
   background-attachment: fixed; */
-  
-  text-align: center;
-  overflow: hidden;
-  position: relative;
+
+    text-align: center;
+    overflow: hidden;
+    position: relative;
 }
 
 .header-title {
-  position: relative;
-  bottom: 1.8rem;
-  font-size: 1.5rem;
-  color: white;
-  font-family: 'Oswald', sans-serif;
-  
+    position: relative;
+    bottom: 1.8rem;
+    font-size: 1.5rem;
+    color: white;
+    font-family: 'Oswald', sans-serif;
+
 }
 
 header h2 {
-  position: relative;
-  bottom: .6rem;
-  text-align: center;
-  font-family: 'Righteous', cursive;
-  color: white;
+    position: relative;
+    bottom: .6rem;
+    text-align: center;
+    font-family: 'Righteous', cursive;
+    color: white;
 
-  font-size: 2.5em;
+    font-size: 2.5em;
 
-  text-transform: uppercase;
-  letter-spacing: .02em;
-  line-height: .9;
-  max-width: 35rem;
-  margin-left: .5rem;
-  margin-right: .5rem;
+    text-transform: uppercase;
+    letter-spacing: .02em;
+    line-height: .9;
+    max-width: 35rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
 }
 
 .logo {
-  position: relative;
+    position: relative;
 
-  top: 1rem;
+    top: 1rem;
 
-  height: 1em;
+    height: 1em;
 }
 
 .header-description {
-  position: relative;
+    position: relative;
 
-  top: 2.5rem;
-  font-size: 0.9rem;
-  font-family: 'Rubik', sans-serif;
-  color: white;
- 
-  max-width: 46rem;
-  font-weight: 300px;
-  margin-left: 1rem;
-  margin-right: 1rem;
+    top: 2.5rem;
+    font-size: 0.9rem;
+    font-family: 'Rubik', sans-serif;
+    color: white;
+
+    max-width: 46rem;
+    font-weight: 300px;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 header span {
-  display: none;
+    display: none;
 }
 
 /* About section */
 
 main {
-  margin: 0 auto;
-  text-align: center;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .services {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 3.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 3.5rem;
 }
 
 
 .services-content1 {
-  display: flex;
-  flex-direction: column;
-  margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
 }
 
 .service-intro {
-  padding-top: .5rem;
-  font-family: 'Arvo', serif;
-  font-size: 2rem;
-  line-height:3rem;
-  font-weight: bold;
-  text-shadow: .6rem .4rem #bebebe;
+    padding-top: .5rem;
+    font-family: 'Arvo', serif;
+    font-size: 2rem;
+    line-height: 3rem;
+    font-weight: bold;
+    text-shadow: .6rem .4rem #bebebe;
 }
 
-.intro-description{
-  padding-top: 2rem;
+.intro-description {
+    padding-top: 2rem;
 }
 
 .service-description {
-  margin-top: 1rem;
+    margin-top: 1rem;
 
 }
 
@@ -261,311 +261,314 @@ main {
 
 
 .service-logo {
-  height: 4.5rem;
+    height: 4.5rem;
 }
 
 .service-subtitle {
-  margin-top: .5rem;
-  font-size: small;
+    margin-top: .5rem;
+    font-size: small;
 }
 
 .service-title {
-  margin-top: .4rem;
+    margin-top: .4rem;
 }
 
 .service-description {
-  max-width: 100%;
-  padding-bottom: 5rem;
-  
-  border-bottom: .15em solid #eee;
+    max-width: 100%;
+    padding-bottom: 5rem;
+
+    border-bottom: .15em solid #eee;
 }
 
 button {
-  position: relative;
-  bottom: 3.5rem;
-  cursor: pointer;
-  margin-bottom: 10rem;
-  background-color: rgba(29, 90, 170, 0.6);
-  padding: .5rem;
-  color: white;
-  border-radius: 5px;
+    position: relative;
+    bottom: 3.5rem;
+    cursor: pointer;
+    margin-bottom: 10rem;
+    background-color: rgba(29, 90, 170, 0.6);
+    padding: .5rem;
+    color: white;
+    border-radius: 5px;
 }
 
 .about {
-  margin-top: 1rem;
-  width: 100%;
-  height: 400px;
-  border: 1px solid red;
+    margin-top: 1rem;
+    width: 100%;
+    height: 400px;
+    border: 1px solid red;
 }
+
 /* footer content */
 footer {
-  background-color: rgba(243, 243, 243, 0.705);
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
-  text-align: center;
-  line-height: 4rem;
+    background-color: rgba(243, 243, 243, 0.705);
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
+    text-align: center;
+    line-height: 4rem;
 }
 
-footer ul{
-  list-style-type: none;
+footer ul {
+    list-style-type: none;
 }
 
-footer ul li{
-  line-height: 6rem;
+footer ul li {
+    line-height: 6rem;
 }
 
-.footer-ql{
-  flex: 1;
+.footer-ql {
+    flex: 1;
 }
 
-.footer-services{
-  flex: 1;
+.footer-services {
+    flex: 1;
 }
 
-.getintouch{
-  flex: 1;
+.getintouch {
+    flex: 1;
 }
 
-footer h2{
-  font-family: 'Righteous', cursive;
+footer h2 {
+    font-family: 'Righteous', cursive;
 }
 
 @media (min-width: 750px) {
 
-  body p {
-    line-height: 2rem;
-    font-size: 1em;
-  }
+    body p {
+        line-height: 2rem;
+        font-size: 1em;
+    }
 
-  header {
-    background-size: cover;
-    height: 100vh; 
+    header {
+        background-size: cover;
+        height: 100vh;
 
-    background-position: center center;
-  }
+        background-position: center center;
+    }
 
-  header span {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    font-size: 1.5rem;
-    color: white;
-  }
-  
-  .header-title {
-    bottom: 1.8em;
-    
-  }
-  
-  header h2 {
-    font-size: 4em;
+    header span {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        font-size: 1.5rem;
+        color: white;
+    }
 
-  }
-  
-  .logo {
-    top: 2.4em;
-  }
-  
-  .header-description {
-    top: 5em;
-    font-size: 1em;
-    line-height: 1.5em;
-  }
+    .header-title {
+        bottom: 1.8em;
 
-  /* services section */
+    }
 
-  .intro-description {
-    max-width: 1000px;
-  }
+    header h2 {
+        font-size: 4em;
 
-  .services-content1{
-    max-width: 1250px;
-    flex-direction: row;
-    justify-content: space-between;
-    border-bottom: .1em solid #eee;
-  }
+    }
 
-  .servcard1 {
-    flex: 1;
-    padding-right: .6em;
-  }
+    .logo {
+        top: 2.4em;
+    }
 
-  .servcard1 button {
-    position: relative;
-    bottom: 1.5em;
-  }
+    .header-description {
+        top: 5em;
+        font-size: 1em;
+        line-height: 1.5em;
+    }
 
-  .servcard2 {
-    flex: 1;
-    border-right: .1em solid #eee;
-    border-left: .1em solid #eee;
-    margin-right: .5em;
-    margin-left: .5em;
-    padding-right: .6em;
-    padding-left: .6em;
-  }
+    /* services section */
 
-  .servcard2 button {
-    position: relative;
-    bottom: 1.5em;
-  }
+    .intro-description {
+        max-width: 1000px;
+    }
 
-  .servcard3 {
-    padding-left: .6em;
-    flex: 1;
-  }
+    .services-content1 {
+        max-width: 1250px;
+        flex-direction: row;
+        justify-content: space-between;
+        border-bottom: .1em solid #eee;
+    }
 
-  .servcard3 button {
-    position: relative;
-    bottom: 1.5em;
-  }
-  
-  /* Individual cards */
-  
-  .service-logo {
-    height: 5em;
-  }
-  
-  .service-subtitle {
-    margin-top: .5em;
-    font-size: small;
-  }
-  
-  .service-title {
-    margin-top: .4rem;
-  }
-  
-  .service-description {
-    margin-bottom: 1.5em;
-    padding-bottom: 1.5em;
-    border-bottom: none;
-    margin-bottom: none;
-  }
+    .servcard1 {
+        flex: 1;
+        padding-right: .6em;
+    }
 
-  /* footer */
-  footer{
-    position: relative;
-  }
+    .servcard1 button {
+        position: relative;
+        bottom: 1.5em;
+    }
 
-  .footer3column{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding-bottom: 6em;
-    text-align: left;
-    width: 100%;
-  }
+    .servcard2 {
+        flex: 1;
+        border-right: .1em solid #eee;
+        border-left: .1em solid #eee;
+        margin-right: .5em;
+        margin-left: .5em;
+        padding-right: .6em;
+        padding-left: .6em;
+    }
 
-  .quicklinks{
-    flex: 1;
-    margin-left: 2.5em;
-  }
-  
-  .footer-services{
-    flex: 1;
+    .servcard2 button {
+        position: relative;
+        bottom: 1.5em;
+    }
 
-    padding-left: 2.5em;
-    border-right: .1em solid #bebebe94;
-    border-left: .1em solid #bebebe94;
-  }
-  
-  .getintouch{
-    flex: 1;
-    padding-left: 2.5em;
-    margin-right: 2em;
-  }
+    .servcard3 {
+        padding-left: .6em;
+        flex: 1;
+    }
 
-  .footerbcn{
-    
-    position: absolute;
-    bottom: .6em;
+    .servcard3 button {
+        position: relative;
+        bottom: 1.5em;
+    }
 
-    text-align: center;
-  }
+    /* Individual cards */
+
+    .service-logo {
+        height: 5em;
+    }
+
+    .service-subtitle {
+        margin-top: .5em;
+        font-size: small;
+    }
+
+    .service-title {
+        margin-top: .4rem;
+    }
+
+    .service-description {
+        margin-bottom: 1.5em;
+        padding-bottom: 1.5em;
+        border-bottom: none;
+        margin-bottom: none;
+    }
+
+    /* footer */
+    footer {
+        position: relative;
+    }
+
+    .footer3column {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding-bottom: 6em;
+        text-align: left;
+        width: 100%;
+    }
+
+    .quicklinks {
+        flex: 1;
+        margin-left: 2.5em;
+    }
+
+    .footer-services {
+        flex: 1;
+
+        padding-left: 2.5em;
+        border-right: .1em solid #bebebe94;
+        border-left: .1em solid #bebebe94;
+    }
+
+    .getintouch {
+        flex: 1;
+        padding-left: 2.5em;
+        margin-right: 2em;
+    }
+
+    .footerbcn {
+
+        position: absolute;
+        bottom: .6em;
+
+        text-align: center;
+    }
 }
 
-@media screen and (min-width: 950px){
-  nav {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    
-    background-color: white;
-    width: 100%;
-    border-bottom: .2em  solid #eee;
-    height: 3em;
-    z-index: 999;
-    flex-direction: row;
-  }
-  
-  .top-nav {
-    flex: 1;
-    position: relative;
-    width: 100%;
-  }
+@media screen and (min-width: 950px) {
+    nav {
+        position: fixed;
+        display: flex;
+        justify-content: space-between;
+
+        background-color: white;
+        width: 100%;
+        border-bottom: .2em solid #eee;
+        height: 3em;
+        z-index: 999;
+        flex-direction: row;
+    }
+
+    .top-nav {
+        flex: 1;
+        position: relative;
+        width: 100%;
+    }
 
 
-  .top-nav h1 {
-    position: relative;
-    padding-top: .2em;
-    padding-left: .8em;
-    font-family: 'Righteous', cursive;
-    margin: 0;
-    font-size: 2em;
-  }
-  
-  /* burger */
-  .top-nav span {
-    display: none;
-  }
-  /* end of burger */
-  
-  .nav-menu {
-    position: relative;
-    top: -.4em;
-    flex: 1;
-    width: 0;
-  }
-  
-  .menu-links {
-    margin-top: none;
-    border-top: none;
-    width: 50;
-    justify-content: flex-end;
-    display: flex !important;
-    flex-direction: row;
-    height: auto;
-  }
-  
-  .menu-links li {
-    padding-top: none;
-    border: none;
-    width: auto;
-  }
+    .top-nav h1 {
+        position: relative;
+        padding-top: .2em;
+        padding-left: .8em;
+        font-family: 'Righteous', cursive;
+        margin: 0;
+        font-size: 2em;
+    }
 
-  .call-now {
-    margin-right: 2em;
-    padding-right: 1em;
-  }
+    /* burger */
+    .top-nav span {
+        display: none;
+    }
 
-  .footerbcn{
-    position: relative;
-    margin-right: 2em;
-    max-width: 1200px;
-  }
+    /* end of burger */
 
-  .footer3column{
-    padding-bottom: 0;
-    max-width: 1200px;
-  }
-  
-  
+    .nav-menu {
+        position: relative;
+        top: -.4em;
+        flex: 1;
+        width: 0;
+    }
+
+    .menu-links {
+        margin-top: none;
+        border-top: none;
+        width: 50;
+        justify-content: flex-end;
+        display: flex !important;
+        flex-direction: row;
+        height: auto;
+    }
+
+    .menu-links li {
+        padding-top: none;
+        border: none;
+        width: auto;
+    }
+
+    .call-now {
+        margin-right: 2em;
+        padding-right: 1em;
+    }
+
+    .footerbcn {
+        position: relative;
+        margin-right: 2em;
+        max-width: 1200px;
+    }
+
+    .footer3column {
+        padding-bottom: 0;
+        max-width: 1200px;
+    }
+
+
 }
-@media screen and (min-width: 1275px){
-  .service-intro {
-    font-size: 2.5rem;
-  }
+
+@media screen and (min-width: 1275px) {
+    .service-intro {
+        font-size: 2.5rem;
+    }
 }
